samples/_failures_safe/1761501693_c31380_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ef89a125.c: In function ‘main’:
./samples/SAFE/__tmp_ef89a125.c:148:12: error: missing terminating " character
  148 |     printf("\nOriginal
      |            ^~~~~~~~~~~
./samples/SAFE/__tmp_ef89a125.c:148:5: error: expected expression at end of input
  148 |     printf("\nOriginal
      |     ^~~~~~
./samples/SAFE/__tmp_ef89a125.c:148:5: error: expected declaration or statement at end of input
